# mceliece

./: .gitmodules  CMakeLists.txt  README.md  matrix.c  matrix.h  mceliece.c  mceliece.h  mcelliece.c  mcelliece.h
hamming/: Makefile  hamming.c  hamming.h  test.c
include/: mceliece.h
source/: bits.h  matrix.c  matrix.h  mceliece.c  mceliece.h
test/: Makefile  mceliece.c  mceliece.h  test.c
testing/: CMakeLists.txt  main.c  test_matrices.c  test_mceliece.c
